==================== 2.23.5 ====================

2008-07-22  Vincent Untz  <vuntz@gnome.org>

	* panel-default-setup.entries: s/top_panel/bottom_panel/ in some
	bottom_panel definitions

2008-06-30  Vincent Untz  <vuntz@gnome.org>

	Fix compiler warnings. Patch by Kjartan Maraas <kmaraas@gnome.org>.
	Part of bug #521409.

	* button-widget.c: (button_widget_unrealize),
	(button_widget_get_icon_theme), (button_widget_get_pixbuf):
	* launcher.c: (drag_drop_cb):
	* panel-action-button.c: (panel_action_connect_server):
	* panel-applet-frame.c:
	* panel-background-monitor.c:
	* panel-ditem-editor.c: (panel_ditem_editor_save):
	* panel-force-quit.c:
	* panel-frame.c:
	* panel-menu-bar.c:
	* panel-menu-button.c:
	* panel-menu-items.c:
	* panel-multiscreen.c: (panel_multiscreen_reinit):
	* panel-separator.c:
	* panel-toplevel.c: (panel_toplevel_calc_floating),
	(panel_toplevel_get_auto_hide):
	* panel-widget.c: (panel_widget_reparent):
	* xstuff.c: (zoom_expose):

2008-06-30  Vincent Untz  <vuntz@gnome.org>

	* launcher.c: (setup_button): fox crash when editing launcher
	properties on OS where NULL isn't a good idea in printf(). Patch by
	Marcel Telka <marcel@telka.sk>. Fix bug #528581.

2008-06-30  Vincent Untz  <vuntz@gnome.org>

	s/string_empty/PANEL_GLIB_STR_EMPTY/

	* libpanel-util/Makefile.am: updated
	* libpanel-util/panel-glib.h: add new file, with only the
	PANEL_GLIB_STR_EMPTY macro right now...
	* panel-util.h: remove string_empty

	* launcher.c: (setup_button):
	* panel-addto.c: (panel_addto_make_text),
	(panel_addto_name_change):
	* panel-menu-items.c: (panel_menu_items_append_from_desktop):
	* panel-properties-dialog.c:
	(panel_properties_dialog_setup_image_chooser),
	(panel_properties_dialog_update_background_image):
	* panel-util.c: (panel_util_get_file_display_for_common_files),
	(panel_util_set_tooltip_text):
	* panel.c: (drop_url): actuall do the
	s/string_empty/PANEL_GLIB_STR_EMPTY/

2008-06-27  Luca Ferretti  <elle.uca@libero.it>
