@@ -1,3 +1,12 @@
+2008-08-03  Vincent Untz  <vuntz@gnome.org>
+
+	* panel-multiscreen.c: (panel_multiscreen_x),
+	(panel_multiscreen_y), (panel_multiscreen_width),
+	(panel_multiscreen_height),
+	(panel_multiscreen_is_at_visible_extreme):
+	Fix assertion. Patch by Matthias Clasen <mclasen@redhat.com>
+	Fix bug #544881
+
 ==================== 2.23.5 ====================
 
 2008-07-22  Vincent Untz  <vuntz@gnome.org>
